ops/overlays/secure/patch-controller-secctx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: workflow-controller, namespace: argo }
spec:
  template:
    spec:
      securityContext:
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: workflow-controller
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
